# train-gpt

./: ab_fp8.py  bench.py  bench_fp8.py  bench_fp8_norm.py  check_fp8_hlo.py  config.py  data.py  debug_bf16_norm.py  debug_fp8.py  fp8.py  generate.py  generate_modal.py  kernels.py  losses.py  lr_sweep.py  model.py  prepare_data.py  pyproject.toml  sft_data.py  sft_modal.py  test_overfit.py  train.py  train_modal.py
